Added all code and documentation for accessing the generals collection.
