# routes/index.js
@@ -4,6 +4,7 @@ const express = require('express');
 const router = express.Router();
 const swaggerDocs = require('./swagger');
 const armiesRoutes = require('./armies');
+const generalsRoutes = require('./generals');
 const utilities = require('../utilities/index');
 
 // Mount the Swagger routes to serve the API documentation
@@ -11,5 +12,8 @@ router.use('/', utilities.handleErrors(swaggerDocs));
 
 // Mount a sub-router to handle all routes under /armies
 router.use('/armies', utilities.handleErrors(armiesRoutes));
+
+// Mount a sub-router to handle all routes under /generals
+router.use('/generals', utilities.handleErrors(generalsRoutes));
 
 module.exports = router;
